metadata/force-app/main/default/objects/CustomName_CdFVb__c/CustomName_CdFVb__c.object-meta.xml
<CustomObject>
    <description>Description_uJihP</description>
    <label>CustomLabel_ZOTPX</label>
    <nameField>
        <label>CustomLabel_ZOTPX</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ZOTPXs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>