metadata/force-app/main/default/objects/CustomName_CdFVb__c/fields/CustomField_xwXPR__c.field-meta.xml
<CustomField>
    <fullName>CustomField_xwXPR__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldRzWJh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>